modified loadtest.sh and sanity.sh